# LangStatBot

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  clang-tidy-draft  data.json
src/: App.cpp  App.h  BotEntity.cpp  BotEntity.h  Command.h  CommandBuilder.cpp  CommandBuilder.h  Data.h  DataManager.cpp  DataManager.h  IBot.h  IDataManager.h  IStorage.h  Message.h  MonthData.cpp  MonthData.h  Storage.cpp  TelegramBotAdapter.h  def.h  main.cpp
src/common/: def.h
src/core/: App.cpp  App.h  BotEntity.cpp  BotEntity.h  Data.h  IBot.h  TelegramBotAdapter.cpp  TelegramBotAdapter.h
src/fsm/: IState.h  StateMachine.cpp  StateMachine.h
src/fsm/states/: AddTimeState.cpp  AddTimeState.h  AddWordState.cpp  AddWordState.h  DumpDataState.cpp  DumpDataState.h  EditTimeState.cpp  EditTimeState.h  IdleState.cpp  IdleState.h  RecieveFileState.cpp  RecieveFileState.h  ShowTimeState.cpp  ShowTimeState.h  ShowWordState.cpp  ShowWordState.h
src/io_interface/: DataManager.cpp  DataManager.h  IDataManager.h  IStorage.h  Storage.cpp  Storage.h
src/logger/: Logger.cpp  Logger.h
src/main/: CMakeLists.txt  main.cpp
src/serialization/: ISerializer.h  JsonSerializer.cpp  JsonSerializer.h
test/: CMakeLists.txt  test_main.cpp
